# vcl_sales

./: MANIFEST.in  OAT_Testing_Document.md  README.md  Sales Team Target 2026.csv  UAT_Testing_Document.md  license.txt  pyproject.toml  requirements.txt  setup.py
docs/testing/: OAT_AI_Daily_Sales_Report.md  UAT_AI_Daily_Sales_Report.md
vcl_sales_dashboard/: hooks.py  modules.txt  patches.txt
vcl_sales_dashboard/api/: collections_dashboard.py  collections_import.py  collections_submission.py  collections_utils.py  customer_360.py  management_dashboard.py  sales_dashboard.py  sales_report_ai.py  sales_targets.py
vcl_sales_dashboard/data/: sales_targets_2026.json
vcl_sales_dashboard/patches/: seed_cn_naming_series.py
vcl_sales_dashboard/public/css/: vcl-dashboard.css
vcl_sales_dashboard/public/js/: collections.js  vcl-api.js
vcl_sales_dashboard/services/: customer_matching.py  openai_client.py  prompt_builder.py  response_parser.py
vcl_sales_dashboard/vcl_quotation/: api.py
vcl_sales_dashboard/vcl_quotation/frontend/: README.md  index.html  package-lock.json  package.json  vite.config.js
vcl_sales_dashboard/vcl_sales_dashboard/fixtures/: custom_field.json  notification.json  print_format.json  (+3 more)
vcl_sales_dashboard/www/: sales-collections-import.html  sales-collections-import.py  sales-collections-submission.html  sales-collections-submission.py  sales-collections.html  sales-collections.py  sales-customer.html  sales-customer.py  sales-dashboard.html  sales-dashboard.py  sales-discrepancy.html  sales-discrepancy.py  sales-manager.html  sales-manager.py
(+50 files in other folders)
