[project]
name = "vcl_sales_dashboard"
version = "0.0.1"
description = "Sales dashboard for VCL sales team"
authors = [
    {name = "Vimit Converters Limited", email = "info@vimitconverters.com"}
]
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = ["frappe"]

[build-system]
requires = ["flit_core>=3.4"]
build-backend = "flit_core.buildapi"

[tool.bench.frappe-dependencies]
frappe = ">=15.0.0"
erpnext = ">=15.0.0"
